Changed translation key to placeholder token. Marked translation key with _html suffix.

--- a/languages/de.ini
+++ b/languages/de.ini
@@ -78,7 +78,6 @@ APA Edition Citation = "APA-Zitierstil (7. Ausg.)"
 applied_filter = "Aktivierter Filter:"
 applied_filters = "Aktivierte Filter:"
 Archival Material = "Archivmaterial"
-Are you sure you want to delete the following page? = "Sind Sie sicher, dass Sie den folgenden Eintrag löschen möchten?"
 Article = "Artikel"
 Ask a Librarian = "Fachauskunft der Bibliothek"
 Associated country = "Zugehöriges Land"
@@ -920,7 +919,8 @@ note_787 = "Andere Beziehung"
 Notes = "Anmerkungen"
 Notifications Broadcasts = "Notifications Broadcasts"
 Notifications Pages = "Notifications Pages"
-notifications_content = "Inhalt (<a href="https://www.markdownguide.org/basic-syntax/" target="_blank">Markdown</a>, <a href="https://packagist.org/packages/elgigi/commonmark-emoji" target="_blank">Emojis</a>)"
+notifications_content_html = "Inhalt (<a href="https://www.markdownguide.org/basic-syntax/" target="_blank">Markdown</a>, <a href="https://packagist.org/packages/elgigi/commonmark-emoji" target="_blank">Emojis</a>)"
+notifications_delete_page_warning = "Sind Sie sicher, dass Sie den folgenden Eintrag löschen möchten?"
 notifications_tab_header = "Inhalt"
 Number = "Nummer"
 number_decimal_point = ","
