--- a/languages/en.ini
+++ b/languages/en.ini
@@ -78,7 +78,6 @@ APA Edition Citation = "APA (7th ed.) Citation"
 applied_filter = "Applied Filter:"
 applied_filters = "Applied Filters:"
 Archival Material = "Archival Material"
-Are you sure you want to delete the following page? = "Are you sure you want to delete the following page?"
 Article = "Article"
 Ask a Librarian = "Ask a Librarian"
 Associated country = "Associated country"
@@ -934,7 +933,8 @@ note_787 = "Other relationship"
 Notes = "Notes"
 Notifications Broadcasts = "Notifications Broadcasts"
 Notifications Pages = "Notifications Pages"
-notifications_content = "Content (<a href="https://www.markdownguide.org/basic-syntax/" target="_blank">Markdown</a>, <a href="https://packagist.org/packages/elgigi/commonmark-emoji" target="_blank">Emojis</a>)"
+notifications_content_html = "Content (<a href="https://www.markdownguide.org/basic-syntax/" target="_blank">Markdown</a>, <a href="https://packagist.org/packages/elgigi/commonmark-emoji" target="_blank">Emojis</a>)"
+notifications_delete_page_warning = "Are you sure you want to delete the following page?"
 notifications_tab_header = "Content"
 Number = "Number"
 number_decimal_point = "."
