Added basic help pages for markdown and emojis.

--- a/languages/de.ini
+++ b/languages/de.ini
@@ -808,6 +808,7 @@ Map = "Karte"
 Map View = "Kartenansicht"
 map_results_label = "An diesem Standort:"
 Maps = "Karten2"
+Markdown and emoji help = "Hilfe zu Markdown und Emojis"
 Media Format = "Medienformat"
 medium = "Medium"
 MeSH Terms = "MeSH Schlagworte"
@@ -919,7 +920,7 @@ note_787 = "Andere Beziehung"
 Notes = "Anmerkungen"
 Notifications Broadcasts = "Notifications Broadcasts"
 Notifications Pages = "Notifications Pages"
-notifications_content_html = "Inhalt (<a href="https://www.markdownguide.org/basic-syntax/" target="_blank">Markdown</a>, <a href="https://packagist.org/packages/elgigi/commonmark-emoji" target="_blank">Emojis</a>)"
+notifications_content = "Inhalt"
 notifications_delete_page_warning = "Sind Sie sicher, dass Sie den folgenden Eintrag löschen möchten?"
 notifications_tab_header = "Inhalt"
 Number = "Nummer"
