--- a/languages/en.ini
+++ b/languages/en.ini
@@ -820,6 +820,7 @@ Map = "Map"
 Map View = "Map View"
 map_results_label = "At this location:"
 Maps = "Maps"
+Markdown and emoji help = "Markdown and emojis help"
 Media Format = "Media Format"
 medium = "Medium"
 MeSH Terms = "MeSH Terms"
@@ -933,7 +934,7 @@ note_787 = "Other relationship"
 Notes = "Notes"
 Notifications Broadcasts = "Notifications Broadcasts"
 Notifications Pages = "Notifications Pages"
-notifications_content_html = "Content (<a href="https://www.markdownguide.org/basic-syntax/" target="_blank">Markdown</a>, <a href="https://packagist.org/packages/elgigi/commonmark-emoji" target="_blank">Emojis</a>)"
+notifications_content = "Content"
 notifications_delete_page_warning = "Are you sure you want to delete the following page?"
 notifications_tab_header = "Content"
 Number = "Number"
