Modified note_775 translation (Finnish)
"Other edition" is better translation here

--- a/languages/fi.ini
+++ b/languages/fi.ini
@@ -899,7 +899,7 @@ note_770 = "Suplementti"
 note_772 = "Suplementin pääjulkaisu"
 note_773 = "Sisältyy julkaisuun"
 note_774 = "Sisältää julkaisun"
-note_775 = "Toinen painos"
+note_775 = "Muu painos"
 note_776 = "Muu ilmiasu"
 note_777 = "Kanssajulkaisu"
 note_780_0 = "Edeltäjä"
