Turn search-sidebar into a landmark

--- a/languages/de.ini
+++ b/languages/de.ini
@@ -1204,6 +1204,7 @@ Search Home = "Suche"
 Search Mode = "Suchmodus"
 Search Results = "Suchergebnisse"
 search results of = "Treffer von"
+Search sidebar = "Such-Seitenleiste"
 Search Tips = "Suchtipps"
 Search Tools = "Suchwerkzeuge"
 Search Type = "Suchmodus"
