Make user field for oauth subject configurable (#3486)

--- a/languages/de.ini
+++ b/languages/de.ini
@@ -453,6 +453,7 @@ external_auth_scope_address = "Lesezugriff auf Ihre Adressangaben"
 external_auth_scope_age = "Lesezugriff auf Ihre Altersangaben"
 external_auth_scope_birthdate = "Lesezugriff auf die Angabe Ihres Geburtsdatums"
 external_auth_scope_block_status = "Überprüfung, ob Ihr Konto gesperrt ist"
+external_auth_scope_cat_id = "Lesezugriff auf Ihre Bibliotheksbenutzerkennung"
 external_auth_scope_email = "Lesezugriff auf Ihre E-Mail-Adresse"
 external_auth_scope_library_user_id = "Lesezugriff auf einen eindeutigen Hashwert auf der Grundlage Ihrer Bibliotheksbenutzerkennung"
 external_auth_scope_locale = "Lesezugriff auf Ihre bevorzugte Sprache"
@@ -460,7 +461,8 @@ external_auth_scope_name = "Lesezugriff auf Ihren Namen"
 external_auth_scope_openid = "Lesezugriff auf Ihre Benutzerkennung"
 external_auth_scope_phone = "Lesezugriff auf Ihre Telefonnummer"
 external_auth_scope_profile = "Lesezugriff auf Ihre grundlegenden Profilinformationen (Name, Sprache, Geburtsdatum)"
-external_auth_scope_unique_id = "Lesezugiff auf Ihren eindeutigem Identifikator"
+external_auth_scope_unique_id = "Lesezugriff auf Ihren eindeutigem Identifikator"
+external_auth_scope_username = "Lesezugriff auf Ihren Benutzernamen"
 external_auth_scopes_none = "keine"
 external_auth_unauthorized = "Sie haben keinen Zugriff auf lizenzpflichtige Inhalte"
 external_auth_unauthorized_desc = "Ihr aktuelles Login erlaubt keinen Zugriff auf lizenzpflichtige Inhalte. Bitte melden Sie sich ab und verwenden Sie eine andere Art der Anmeldung."
