--- a/languages/en.ini
+++ b/languages/en.ini
@@ -463,6 +463,7 @@ external_auth_scope_address = "Read your address"
 external_auth_scope_age = "Read your age"
 external_auth_scope_birthdate = "Read your date of birth"
 external_auth_scope_block_status = "Check if your account has blocks"
+external_auth_scope_cat_id = "Read your internal library user identifier"
 external_auth_scope_email = "Read your email address"
 external_auth_scope_library_user_id = "Read a unique hash based on your library user identifier"
 external_auth_scope_locale = "Read your active language"
@@ -471,6 +472,7 @@ external_auth_scope_openid = "Read your user identifier"
 external_auth_scope_phone = "Read your phone number"
 external_auth_scope_profile = "Read your basic profile information (name, language, birthdate)"
 external_auth_scope_unique_id = "Read your unique identifier"
+external_auth_scope_username = "Read your username"
 external_auth_scopes_none = "none"
 external_auth_unauthorized = "You are not authorized to access licensed material"
 external_auth_unauthorized_desc = "Your login method does not provide access to licensed material. Please log out and then log in using another method."
