Use friendlier error message and redirect to record

--- a/languages/en.ini
+++ b/languages/en.ini
@@ -411,6 +411,7 @@ epf_recommendations = "Publication Results"
 epf_recommendations_more = "More Publication Results"
 ePub Full Text = "ePub Full Text"
 Era = "Era"
+error_accessing_full_text = "There was an error retrieving the full text you requested."
 error_creating_marc_xml = "An error occurred when formatting MARC"
 error_inconsistent_parameters = "Sorry, an error has occurred. Inconsistent parameters detected."
 error_page_parameter_list_heading = "Request Parameters"
