More translations courtesy of Craig Murdoch, via Lokalise.

--- a/languages/mi.ini
+++ b/languages/mi.ini
@@ -1,8 +1,19 @@
 ; Translations courtesy of Craig Murdoch.
 Abstract = "Whakarāpopotonga"
+Access = "Urunga"
+Access URL = "URL Uru"
+access_denied = "Kua aukatia te urunga."
+Accession Number = "Tau Tāpiringa"
 Account = "Pūkete"
 account_block_options_missing = "Kua tangohia ētahi kōwhiringa nā tētahi āraitanga ki tō pūkete. Ngā taipitopito: %%details%%"
+account_requests_available = "E wātea ana kia tīkina atu"
+Add a Library Card = "Tāpirihia he Kāri Whare Pukapuka"
+Add a Library Card using login = "Tāpiritia he Kāri Whare Pukapuka mā te Takiuru Pūtahitanga"
+Add a Note = "Tāpirihia he Tuhipoka"
+Add Tag = "Tāpirihia he Tūtohu"
+Add Tags = "Tāpiri Tūtohu"
 Add to another list = "Tāpiri ki tētahi atu rārangi"
+Add to Book Bag = "Tāpirihia ki te Pēke Pukapuka"
 Add to favorites = "Tiaki ki tētahi rārangi"
 Add your comment = "Tāpirihia tō kōrero"
 add_comment_fail_blank = "Kaua te kōrero e pātea"
@@ -13,6 +24,7 @@ add_search = "Tāpiri āpure rapu"
 add_search_group = "Tāpiri rōpū rapu"
 add_tag_note = "Mā ngā mokowā e wehewehe i ngā ripa. Whakamahi tohukī mō ngā tūtohu kupu-maha."
 add_to_favorites_html = "Tāpiri <em>%%title%%</em> ki ngā makau"
+Additional data = "Ngā raraunga tāpiri"
 Address = "Wāhinoho"
 adv_search_all = "Ngā āpure katoa"
 adv_search_author = "Kaituhi"
@@ -33,15 +45,23 @@ Advanced Search = "Rapu Whatutoto"
 advSearchError_noRights = "Ka aroha noa, engari kāore ō whakaaetanga ki te takatā i tērā rapu. Kua mōnehu pea tō wātū pūtirotiro?"
 advSearchError_notAdvanced = "Ehara te rapu i tono koe ki te takatā i te rapu whatutoto."
 advSearchError_notFound = "Kāore i kitea te rapu i tono koe."
+ajaxview_label_information = "Mōhiohio"
 All = "Katoa"
 All Fields = "Ngā āpure katoa"
 All Pages Loaded = "Kua utaina ngā whārangi katoa"
 All Text = "Ngā kuputuhi katoa"
+alphabrowse_matches = "Ngā hua"
+Always ask me = "Pātai mai i ngā wā katoa"
 An error has occurred = "Kua puta mai tētahi hapa"
 An error occurred during execution; please try again later. = "Kua hapa te whakahaere; me ngana anō ā muri ake."
 AND = "AND"
+and = "me"
+anonymous_tags = "Ngā Tūtohu Kirimuna"
 APA Citation = "Tohutoro APA"
+APA Edition Citation = "Tohutoro APA (7th ed.)"
 applied_filter = "Kua hoatu te tātari"
+applied_filters = "Ngā Tātari Hoatu:"
+Archival Material = "Ihirangi Pūranga"
 Article = "Tuhinga"
 Ask a Librarian = "Tonoa he kaitiaki pukapuka"
 Associated country = "Whenua pātahi"
@@ -57,19 +77,29 @@ Available Functionality = "Taumahinga Wātea"
 Awards = "Ngā whakawhiwhinga"
 Back to Record = "Hoki ki te Pūkete"
 Back to Search Results = "Hoki ki ngā Hua Rapu"
+Bag = "Pēke pukapuka"
 Balance = "Taurite"
 Barcode = "Waeherepae"
 Bibliographic Details = "Ngā taipitopito rārangi puna kōrero"
 Bibliography = "Rārangi puna kōrero"
 Blu-ray Disc = "Ngā kōpae Hihi-ōrangi"
 Book = "Pukapuka"
+Book Bag = "Pēke pukapuka"
 Book Chapter = "Wāhanga pukapuka"
 Book Cover = "Uhi pukapuka"
+bookbag_confirm_empty = "Me whakangita tō Pēke Pukapuka?"
+bookbag_delete = "Mukua ngā makau kua tīpakotia"
+bookbag_delete_selected = "Mukua ngā mea tīpako"
 Bookmark = "Tohuwāhi"
+bookplate_label = "Tapanga %%title%%"
 Books = "Ngā pukapuka"
 Borrowing Location = "Tauwāhi Mino"
 Braille = "Tuhi matapō "
 Brief View = "Tirohanga poto"
+browse_author = "Kaituhi"
+browse_dewey = "Tau karanga (Dewey)"
+browse_format = "Hōputu"
+browse_lcc = "Tau karanga (LC)"
 bulk_email = "Kua tīpakona te īmērā"
 bulk_email_success = "I īmēratia t/ō tūemi"
 bulk_email_title = "Ngā tūemi Putumōhio Whare Pukapuka AUT"
@@ -100,10 +130,14 @@ Call Number = "Tau karanga"
 callnumber_abbrev = "Tau karanga"
 Cannot find record = "Tē kitea te pūkete"
 Cannot find similar records = "Tē kitea he pūkete ōrite"
+captcha_label_single = "CAPTCHA:"
 captcha_not_passed = "Kāore i hipa te CAPTCHA"
 Cassette = "Rīpene"
 CD = "CD"
 Change Password = "Huri Kupuhipa"
+change_notification_email_message = "Kātahi tonu ka taea tētahi tono ki te huri i tō wāhitau īmēra i te %%library%%. Ki te kore koe taua tono i mahi, me takiuru pea koe ki te %%url%% kei takahia tō pūkete. Me tono tautoko i %%email%% mēnā he pātai, he āwangawanga ōu."
+change_notification_email_subject = "Whakamōhiotanga Panoni Īmēra Pūkete"
+channel_add_more = "Tāpirihia kia nui ake ngā hongere pēnei"
 Check Hold = "Tiro puringa"
 Check Recall = "Tiro tono whakahoki"
 Checked Out = "Kua tākina atu"
@@ -121,14 +155,17 @@ citation_volume_abbrev = "Huānga."
 Cite this = "Kīia tēnei"
 City = "Tāone"
 Clear = "Ūkui"
+clear_feedback_filter = "Ūkui tātari"
 clear_tag_filter = "Ūkui tātari"
 close = "kati"
 Code = "Waehere"
 Collection = "Kohinga"
+comment_anonymous_user = "Tautangata"
 Company/Entity = "Kamupene/Hinonga"
 Configuration = "Whirihoranga"
 confirm_delete = "Me muku tēnei?"
 confirm_delete_brief = "Muku tūemi?"
+confirm_delete_library_card_text = "Me āta muku tēnei kāri whare pukapuka?"
 confirm_delete_list_brief = "Muku Rārangi?"
 confirm_delete_list_text = "Me muku tēnei rārangi?"
 confirm_delete_tags_brief = "Mukua ngā tūtohu"
@@ -166,6 +203,7 @@ date_year_placeholder = "Tau"
 default_list_title = "Ngā makau"
 del_search = "Tango rōpū rapu"
 Delete = "Muku"
+delete_account_confirm = "Me āta muku tō pūkete?"
 delete_all = "Muku katoa"
 delete_comment_failure = "Kāore i taea te muku tākupu."
 delete_comment_success = "I mukua te tākupu."
@@ -189,12 +227,16 @@ Due Date = "Rā whakahoki"
 DVD = "DVD"
 eBook = "īPukapuka"
 Edit = "Takatā"
+edit = "takatā"
 Edit this Advanced Search = "Takatāngia tēnei rapu whatutoto"
 edit_list = "Takatā rārangi"
 edit_list_fail = "Ka aroha, kāore koe e whakaaetia ki te takatā i tēnei rārangi"
 edit_list_success = "I pai te whakahou i te rārangi."
 Edition = "Putanga"
 eds_expander_fulltext = "Rapua hoki ngā kuputuhi katoa o ngā tuhinga"
+eds_expander_relatedsubjects = "Hoatu marau ōrite"
+eds_expander_thesaurus = "Hoatu kupu whai pānga"
+eds_limiter_FM6 = "Ka Wātea Te Ororongo"
 eds_limiter_FT = "Kuputuhi katoa"
 eds_limiter_FT1 = "E wātea ana i te kohinga whare pukapuka"
 eds_limiter_RV = "Kua arotake aropātia"
@@ -219,6 +261,7 @@ email_sending = "E tuku karere ana…"
 email_subject = "Marau"
 email_success = "Kua tukuna te karere"
 Empty = "Kua hema"
+empty_search_disallowed = "Tē taea he uiui hema i te ūnga rapu"
 End Page = "Whārangi mutunga"
 Era = "Wā"
 error_inconsistent_parameters = "Ka aroha, kua puta tētahi hapa. I kitea he tawhā maiorooro."
@@ -244,6 +287,8 @@ export_send = "Tuku ki %%service%%"
 export_success = "Kua rite te kaweake"
 export_to = "Kaweake ki %%target%%"
 export_unsupported_format = "Hōputu kaweake tē tautokona"
+external_auth_access_login_message = "Kei te tono urunga tētahi taupānga o waho ki ō raraunga. Me takiuru ki te arotake me te whakamana i te tono."
+external_auth_allow_access = "Tuku Urunga"
 external_auth_heading = "Urunga ki ngā rauemi whai raihana"
 external_auth_login_message = "Takiuru kia uru atu ki ngā rauemi whai raihana"
 external_auth_unauthorized = "Kāore koe e whakaaetia ana kia uru atu ki ngā rauemi whai raihana"
@@ -263,13 +308,17 @@ fav_list_delete_cancel = "Kāore te rārangi i mukua."
 fav_list_delete_fail = 'Ka aroha, kua puta tētahi hapa. "Kāore tō rārangi i mukua.'
 Fee = "Utu"
 Feedback = "Urupare"
+feedback_delete_success = "%%count%% whakautu whakahokinga whakaaro kua mukua."
+feedback_email = "Īmēra"
 feedback_help_label = "Ka hia āwhina koe?"
 feedback_name = "Ingoa"
 feedback_response = "Tēnā koe mō tō urupare."
+feedback_status_answered = "Kua whakautua"
 feedback_title = "Tukua mai tō urupare"
 Field of activity = "Momo mahi"
 File Description = "Whakaahuatanga kōnae"
 Filter = "Tātari"
+filter_toggle_entries = "%%count%% tātari"
 filter_wildcard = "Tētahi"
 Find = "Kimi"
 find_more_ellipsis = "Kimihia ētahi atu…"
@@ -318,6 +367,7 @@ history_results = "Ngā hua"
 history_save = "Me tiaki?"
 history_save_link = "Tiaki"
 history_saved_searches = "Ngā rapu kua tiakina"
+history_schedule = "Hōtaka matohi"
 history_search = "Rapu"
 history_time = "Wā"
 hold_available = "Ready to pick up"
@@ -325,14 +375,18 @@ hold_available_until = "E wātea ana kia tīkina atu Until %%date%%"
 hold_cancel = "Whakakore puringa"
 hold_cancel_all = "Whakakorea ngā pūringa katoa"
 hold_cancel_fail = 'Kāore tō tono i whakakorea" Tono āwhina anō i tētahi kaitiaki pukapuka'
+hold_cancel_fail_items = "%%count%% tonu tē taea te whakakore"
 hold_cancel_selected = "Whakakorea ngā puringa kua tīpakona"
 hold_cancel_success = "I pai te whakakore i tō tono"
 hold_cancel_success_items = 'I pai te whakakore i te "%%count%% tono'
 hold_date_invalid = "Tāurua he rā whaimana"
 hold_date_past = "Tāurua he rā āmuri atu"
+hold_edit_success_items = "%%count%% puringa kua whakahoutia"
 hold_empty_selection = "Kāore he puringa i tīpakohia"
+hold_error_age_restricted = "Tē taea tētahi puringa te whakarite nā te whakatiki taipakeke kua utaina ki runga i ngā kiko."
 hold_error_blocked = "Kāore i a koe te mana tika hei whakarite puringa ki tēnei tūemi"
 hold_error_fail = "I rahua tō tono. Tono āwhina anō i tētahi kaitiaki pukapuka"
+hold_error_too_many_holds = "Tē taea te whakarite puringa nā te mea kua hipa kē te mōrahi o ngā puringa."
 hold_expires = "Ka mōnehu"
 hold_invalid_pickup = "Kua tāurua he wāhi tiki muhu. Me whakamātau anō"
 hold_invalid_request_group = "Kua tāurua he rōpū tono puringa muhu. Me whakamātau anō"
@@ -346,6 +400,7 @@ hold_record_already_on_loan = "E mino kētia ana e koe te rekoata"
 hold_request_group = "He tono mai i"
 hold_requested_group = "I tonoa mai i"
 hold_required_by = "Kua kore e hiahiatia ā muri i te"
+hold_required_by_optional = "Kua kore e hiahiatia ā muri i te"
 hold_success = "I oti pai tō tono"
 Holdings = "Ngā puringa"
 Holdings at Other Libraries = "Ngā puringa i ētahi atu whare pukapuka"
@@ -420,6 +475,8 @@ Item removed from favorites = "Ngā tuhipoka"
 Item removed from list = "Kua tangohia he tūemi ite rārangi"
 Items = "Ngā tūemi"
 items = "ngā tūemi"
+items_added_to_bookbag = "%%count%% tūemi kua tāpiritia ki tō Pēke Pukapuka"
+items_already_in_bookbag = "%%count%% tūemi kei roto kē i tō Pēke Pukapuka, tē taea rānei te tāpiri"
 Journal = "Hautaka"
 Journal Articles = "Ngā tuhinga hautaka"
 Journal Info = "Mōhiohio hautaka"
@@ -436,6 +493,7 @@ Last = "Whakamutunga"
 Last Modified = "Whakakētanga tōmua"
 Last Name = "Ingoa whānau"
 less = "iti iho"
+less_ellipsis = "iti iho…"
 libphonenumber_invalid = "Tau waea muhu"
 libphonenumber_invalidcountry = "Waehere waea whenua muhu"
 libphonenumber_invalidregion = "Waehere rohe muhu:"
@@ -490,7 +548,9 @@ More catalog results = "Ētahi atu hua putumōhio"
 More options = "Ētahi kōwhiringa anō"
 More Topics = "Ētahi kaupapa anō"
 more_authors_abbrev = "me ētahi atu."
+more_ellipsis = "ētahi atu…"
 more_info_toggle = "Whakaaturia/hunaia he mōhiohio anō."
+more_options_ellipsis = "Ētahi kōwhiringa anō…"
 more_topics = "%%count%% kaupapa atu anō"
 Most Recent Received Issues = "Ngā putanga whiwhi hou rawa"
 Multiple Call Numbers = "Ngā tau karanga maha"
@@ -504,6 +564,7 @@ navigate_back = "Hoki"
 nearby_items = 'Ngā tūemi tata ki "%%title%%"'
 New Items = "Ngā tūemi hou"
 New Title = "Taitara hou"
+new_results_heading = "%%count%% hua hou rawa"
 Newspaper = "Nūpepa"
 Next = "Panuku"
 No citations are available for this record = "Kāore e wātea ana he kupu hautoa mō tēnei pūkete"
@@ -563,6 +624,13 @@ Number = "Tau"
 number_decimal_point = "."
 number_thousands_separator = ","
 Occupation = "Mahi"
+od_avail_avail = "Wātea:"
+od_avail_holds = "Ngā puringa:"
+od_but_cancel_hold = "Whakakore puringa"
+od_but_gettitle_s = "Tikiake"
+od_but_hold_s = "Whakarite puringa"
+od_ebook-epub-adobe = "Adobe EPUB eBook"
+od_ebook-pdf-adobe = "Adobe PDF eBook"
 of_num_results = "#%%position%% o ngā hua %%total%%"
 On Reserve = "Kua tāpuitia"
 On Reserve - Ask at Circulation Desk = "Kua tāpuitia - tonoa he kaitiaki pukapuka"
@@ -582,6 +650,8 @@ Other Editions = "Ētahi atu putanga"
 Other Libraries = "Ētahi atu whare pukapuka"
 Other Sources = "Ētahi atu puna"
 Page not found. = "Tē kitea te whārangi."
+page_num = "Whārangi %%page%%"
+Password = "Kupuhipa"
 past_days = "{range, plural, =1 {Inanahi} other {Ngā # Rā kua hipa}}"
 patron_account_expires = "Ka mōnehu"
 PDF Full Text = "Kuputuhi katoa PDF"
@@ -604,6 +674,7 @@ Please upgrade your browser. = "Whakamohoatia tō pūtirotiro."
 Preferences = "Ngā manakohanga"
 Preferred Library = "Whare pukapuka manako"
 Prev = "Tōmua"
+prev_ellipsis = "Tōmua..."
 Preview = "Arokite"
 Preview from = "Arokite mai i"
 Previous Title = "Taitara tōmua"
@@ -627,15 +698,31 @@ Published in = "I whakaputaina i"
 Publisher = "Kaiwhakaputa"
 Publisher Information = "Mōhiohio kaiwhakaputa"
 Publisher Permissions = "Ngā whakaaetanga whakaputa"
+QR Code = "QR Code"
 random_recommendation_title = "Ētahi tūemi matapōkere i ō hua"
 Range = "Awhe"
 Range slider = "Pūreti awhe"
+rating_10 = "½ whetū"
+rating_100 = "5 whetū"
+rating_20 = "1 whetū"
+rating_30 = "1½ whetū"
+rating_40 = "2 whetū"
+rating_50 = "2½ whetū"
+rating_60 = "3 whetū"
+rating_70 = "3½ whetū"
+rating_80 = "4 whetū"
+rating_90 = "4½ whetū"
+rating_add_or_update = "Tāpiritia, ka whakahou rānei i te Whakatauranga"
+rating_summary = "%%count%% whakatauranga"
+rating_summary_single = "1 whakatauranga"
+rating_summary_unrated = "Tāpirihia te whakatauranga tuatahi"
 Read the full review online... = "Pānui tuihonotia te arotake katoa…"
 Recall This = "Tonoa kia whakahokia tēnei"
 recently_returned_channel_title = "I whakahokia i nā noa nei"
 Record Citations = "Ngā kupu hautoa kōpae"
 Record Count = "Tapeke kōpae"
 Record Type = "Momo kōpae"
+recovery_email_notification = "Ka tae mai he tono ki te whakaora anō i te kupuhipa mō tō pūkete i te %%library%%."
 Refine Results = "Whakamahine hua"
 Region = "Rohe"
 relais_available = "E wātea ana tēnei tūemi mā te hoatu taurewa whakawhiti whare pukapuka. Me tono?"
@@ -649,6 +736,7 @@ relais_success_message = 'Kua hangaia te tau tuakiri #%%id%%. "Ka whiwhi koe i t
 Related Author = "Kaituhi whai pānga"
 Related Items = "Ngā tūemi whai pānga"
 Related Subjects = "Ngā marau whai pānga"
+Remove filter = "Tango tātari"
 Remove Filters = "Tango tātari"
 renew_all = "Whakahoutia ngā tūemi katoa"
 renew_determine_fail = "Tē taea te mōhio mēnā ka taea tō tūemi te whakahou. Whakapā ki tētahi kaitiaki pukapuka."
@@ -670,6 +758,7 @@ request_in_transit = "E kawea atu ana ki te tauwāhi tiki atu"
 request_place_text = "Tāpaetia he tono"
 request_submit_text = "Tāpae tono"
 Requests = "Ngā tono"
+Reserves = "Ngā tāpuitanga"
 result_checkbox_label = "Tīpakona te hua me te tau %%number%%"
 result_count = "%%count%% hua"
 Results = "Ngā hua"
@@ -767,7 +856,16 @@ Start Page = "Tīmata whārangi"
 starting from = "e tīmata ana i"
 Status = "Tūnga"
 status_unknown_message = "Kāore te tūnga mataora e wātea ana"
+storage_retrieval_request_available = "E wātea ana kia tīkina atu"
+storage_retrieval_request_cancel_success_items = "I pai te whakakore i te %% count%% tono"
+storage_retrieval_request_canceled = "Kua whakakorea"
+storage_retrieval_request_date_invalid = "Tāurua he rā whaimana"
+storage_retrieval_request_date_past = "Tāurua he rā āmuri atu"
 storage_retrieval_request_expires = "Ka mōnehu"
+storage_retrieval_request_issue = "Rā"
+storage_retrieval_request_processed = "Kua tukatukatia"
+storage_retrieval_request_submit_text = "Tāpaetia he tono"
+storage_retrieval_request_year = "Tau"
 Subcollection = "Kohinga-iti"
 Subject = "Marau"
 Subject Area = "Wāhanga marau"
@@ -793,6 +891,7 @@ switchquery_wildcard = "Mā te tāpiri tohu kārimākā e tikia atu ai pea ngā 
 System Unavailable = "Tē wātea te pūnaha"
 Table of Contents = "Rārangi ihirangi"
 Table of Contents unavailable = "Tē wātea te rārangi ihirangi"
+tags_deleted = "%count% tūtohu kua mukua"
 Text this = "Pātuhitia tēnei"
 The record you selected is not part of any of your lists. = "Kāore te pūkete i tīpako koe nō tētahi o ō rārangi."
 The record you selected is not part of the selected list. = "Kāore te pūkete i tīpako koe nō te rārangi kua tīpakona."
@@ -806,6 +905,7 @@ Title = "Taitara"
 Title not available = "Tē wātea te taitara"
 Title View = "Tirohanga taitara"
 title_hold_place = "Tāpaetia he tono taumata taitara"
+title_wrapper = "%%pageTitle%% %%titleSeparator%% %%siteTitle%%"
 To = "Ki"
 Too Many Email Recipients = "He tokomaha rawa ngā kaiwhiwhi īmēra"
 too_many_favorites = 'He nui rawa tēnei rārangi hei whakaaturanga i te wā kotahi." Me hurinaha anō ō makau kia nui atu ngā rārangi, me whakawhāiti rānei mā te whakamahi tūtohu.'
@@ -829,6 +929,7 @@ URL = "URL"
 Use for = "Whakamahi mō"
 Use instead = "Whakamahi kē"
 User Account = "Pūkete kaiwhakamahi"
+verification_email_notification = "Kātahi tonu ka taea tētahi tono ki te manatoko i tō wāhitau īmēra i te %%library%%."
 VHS = "VHS"
 Video = "Ataata"
 Video Clips = "Ngā topenga ataata"
